--- a/5-HTML-CSS-Projects/1-Website-Layout/style.css
+++ b/5-HTML-CSS-Projects/1-Website-Layout/style.css
@@ -40,3 +40,37 @@ footer {
   margin-bottom: 10px;
   border-radius: 3px;
 }
+
+header,
+footer {
+  padding: 20px 0;
+}
+
+nav,
+section {
+  padding: 200px 0;
+}
+
+.container {
+  width: 960px;
+  margin: 0 auto;
+}
+
+nav,
+section,
+footer {
+  float: left;
+}
+
+nav {
+  width: 200px;
+  margin-right: 10px;
+}
+
+section {
+  width: 750px;
+}
+
+footer {
+  width: 960px;
+}
